# DjangoNinjaTutorial

./: db.sqlite3  pyproject.toml  test.sh
.github/workflows/: ci.yaml
foo/: asgi.py  settings.py  urls.py  wsgi.py
